--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,33 @@
+#version: "3.8"
+
+#services:
+#  db:
+#    image: mongo:latest
+#   container_name: "mongodb"
+#   ports:
+ #     - "27017:27017"
+  #  environment:
+   #   - MONGODB_URL=mongodb://localhost:27017/authDB
+    #volumes:
+#      - mongodb:/api_jwt_gin/data/db
+ #   restart: unless-stopped
+#
+ # jwt_api:
+  #  build: .
+   # container_name: "api_jwt_gin"
+    #environment:
+     # DB_DB: "mongodb"
+#      DB_HOST: "db"
+ #     DB_TABLE: "mongodb"
+  #    DB_PORT: "27017:27017"
+   # ports:
+    #  - "4500:4500"
+#    depends_on:
+ #     - db
+
+#volumes:
+#  mongodb:
+
 version: "3.8"
 
 services:
@@ -6,20 +36,11 @@ services:
     container_name: "mongodb"
     ports:
       - "27017:27017"
-    environment:
-      - MONGODB_URL=mongodb://localhost:27017/authDB
-    volumes:
-      - mongodb:/api_jwt_gin/data/db
     restart: unless-stopped
 
   jwt_api:
     build: .
     container_name: "api_jwt_gin"
-    environment:
-      DB_DB: "mongodb"
-      DB_HOST: "db"
-      DB_TABLE: "mongodb"
-      DB_PORT: "27017:27017"
     ports:
       - "4500:4500"
     depends_on:
